Set border-collapse: separate for Calendar just in case there's reset CSS setting border-collapse: collapse for tables.   Fixes #14059.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@26806 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/claro/Calendar.less
+++ b/themes/claro/Calendar.less
@@ -43,6 +43,7 @@
 	text-align:center;
 	padding:6px 5px 3px 5px;
 	.border-radius(4px);
+	border-collapse: separate;	// in case user CSS has set border-collapse: collapse for tables
 }
 .dj_ie6 .claro .dijitCalendar {
 	background-image:none;
